# c6-enviro

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md
contract/: codegen.mjs  contract.json  contract.schema.note.md  contract.test.mjs
deploy/: Caddyfile.example  README.md
docs/: CONTRACT.md  HARDWARE.md  INTEGRATION.md  LESSONS.md  WIRING.md
docs/research/: 00-ground-truth.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/bme68x/: CMakeLists.txt
firmware/host-test/: Makefile  test_cycle.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_config.c  app_config.h  battery.c  battery.h  buttons.c  buttons.h  cycle.c  cycle.h  idf_component.yml  led.c  led.h  main.c  sensor.c  sensor.h  version.h  zb_contract.h  zb_device.c  zb_device.h
homeassistant/: README.md
scripts/: build-firmware.sh  gen-manifest.mjs
web/: index.html
web/console/: index.html
web/css/: style.css
web/firmware/: manifest.json
web/js/: app.js  flash.js
z2m/: biometal_enviro.mjs  package-lock.json  package.json
z2m/lib/: contract.generated.mjs  defs.mjs
z2m/test/: converter.smoke.test.mjs  defs.test.mjs  firmware.commissioning.test.mjs  web.flash-safety.test.mjs
